--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -73,81 +73,85 @@
                 @*Customer Rating here*@
                 @{
                     var ReviewCount = @Model.product.UserReviews.Count();
-                    var ReviewAvg = @Model.product.UserReviews.Select(r => r.Rating).Average();
+                    var ReviewAvg = @Model.product.UserReviews.Any() ? @Model.product.UserReviews.Select(r => r.Rating).Average() : 0;
                     var ReviewGroup = @Model.product.UserReviews.GroupBy(r => r.Rating).OrderBy(x => x.Key);
                 }
-                <div class="span9">
-                    <div class="row">
-                        <div class="span4">
-                            <div class="rating-block">
-                                <h4>Average user rating</h4>
-                                <h2 class="bold padding-bottom-7">@ReviewAvg.ToString("0.0")<small>/ @ReviewCount</small></h2>
-                                @for (int i = 0; i < 5; i++)
-                                {
-                                    if (i < ReviewAvg)
+                @if (ReviewCount != 0)
+                {
+                    <div class="span9">
+                        <div class="row">
+                            <div class="span4">
+                                <div class="rating-block">
+                                    <h4>Average user rating</h4>
+                                    <h2 class="bold padding-bottom-7">@ReviewAvg.ToString("0.0")<small>/ @ReviewCount</small></h2>
+                                    @for (int i = 0; i < 5; i++)
                                     {
-                                        <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-                                            <span class="fas fa-star" aria-hidden="true"></span>
-                                        </button>
+                                        if (i < ReviewAvg)
+                                        {
+                                            <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+                                                <span class="fas fa-star" aria-hidden="true"></span>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
+                                                <span class="fas fa-star" aria-hidden="true"></span>
+                                            </button>
+                                        }
                                     }
-                                    else
-                                    {
-                                        <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-                                            <span class="fas fa-star" aria-hidden="true"></span>
-                                        </button>
-                                    }
-                                }
+                                </div>
                             </div>
-                        </div>
-                        <div class="span4">
-                            <div>
-                                <h4>Rating breakdown</h4>
-                                @foreach (var grp in ReviewGroup)
-                                {
-                                    var total = grp.Count();
-                                    var number = grp.Key;
-                                    String progressBarStyle = "";
-                                    var width = ((total * 100) / ReviewCount);
+                            <div class="span4">
+                                <div>
+                                    <h4>Rating breakdown</h4>
+                                    @foreach (var grp in ReviewGroup)
+                                    {
+                                        var total = grp.Count();
+                                        var number = grp.Key;
+                                        String progressBarStyle = "";
+                                        var width = ((total * 100) / ReviewCount);
 
-                                    if (number == 5)
-                                    {
-                                        progressBarStyle = "background-color:#4CAF50;width:" + @width.ToString() + "%";
-                                    }
-                                    else if (number == 4)
-                                    {
-                                        progressBarStyle = "background-color:#2196F3;width:" + @width.ToString() + "%";
-                                    }
-                                    else if (number == 3)
-                                    {
-                                        progressBarStyle = "background-color:#00bcd4;width:" + @width.ToString() + "%";
-                                    }
-                                    else if (number == 2)
-                                    {
-                                        progressBarStyle = "background-color:#ff9800;width:" + @width.ToString() + "%";
-                                    }
-                                    else if (number == 1)
-                                    {
-                                        progressBarStyle = "background-color:#f44336; width:" + @width.ToString() + "%";
-                                    }
-                                    <div class="pull-left">
-                                        <div class="pull-left" style="width:35px; line-height:1;">
-                                            <div style="height:9px; margin:5px 0;">@number <span class="far fa-star"></span></div>
-                                        </div>
-                                        <div class="pull-left" style="width:180px;">
-                                            <div class="progress" style="height:9px; margin:8px 0;">
-                                                <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style=@progressBarStyle>
-                                                    &nbsp;
+                                        if (number == 5)
+                                        {
+                                            progressBarStyle = "background-color:#4CAF50;width:" + @width.ToString() + "%";
+                                        }
+                                        else if (number == 4)
+                                        {
+                                            progressBarStyle = "background-color:#2196F3;width:" + @width.ToString() + "%";
+                                        }
+                                        else if (number == 3)
+                                        {
+                                            progressBarStyle = "background-color:#00bcd4;width:" + @width.ToString() + "%";
+                                        }
+                                        else if (number == 2)
+                                        {
+                                            progressBarStyle = "background-color:#ff9800;width:" + @width.ToString() + "%";
+                                        }
+                                        else if (number == 1)
+                                        {
+                                            progressBarStyle = "background-color:#f44336; width:" + @width.ToString() + "%";
+                                        }
+                                        <div class="pull-left">
+                                            <div class="pull-left" style="width:35px; line-height:1;">
+                                                <div style="height:9px; margin:5px 0;">@number <span class="far fa-star"></span></div>
+                                            </div>
+                                            <div class="pull-left" style="width:180px;">
+                                                <div class="progress" style="height:9px; margin:8px 0;">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style=@progressBarStyle>
+                                                        &nbsp;
+                                                    </div>
                                                 </div>
                                             </div>
+                                            <div class="pull-right" style="margin-left:10px;">@total</div>
                                         </div>
-                                        <div class="pull-right" style="margin-left:10px;">@total</div>
-                                    </div>
-                                }
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                }
+
                 @*tab starts here description,  additional info and Review*@
                 <div class="row">
                     <div class="span9">
@@ -174,7 +178,7 @@
                             </div>
                             @*Customer Review Starts here*@
                             <div class="tab-pane" id="review">
-                                <div class="span9">
+                                <div class="span8">
                                     <div class="row">
                                         <div class="span8">
                                             <div class="well well-sm">
@@ -212,7 +216,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                @foreach (var review in Model.product.UserReviews.OrderByDescending(r=>r.CreateAt).Take(3))
+                                @foreach (var review in Model.product.UserReviews.OrderByDescending(r => r.CreateAt).Take(3))
                                 {
                                     <div class="span8">
                                         <div class="review-block">
@@ -273,6 +277,7 @@
                                 <a class="left button" href="#myCarousel-1" data-slide="prev"></a><a class="right button" href="#myCarousel-1" data-slide="next"></a>
                             </span>
                         </h4>
+                        @*related product image carousel code*@
                         <div id="myCarousel-1" class="carousel slide">
                             <div class="carousel-inner">
                                 @for (int i = 0; i < @Model.relatedProducts.Count(); i += 3)
@@ -303,20 +308,20 @@
                 <div class="block">
                     <ul class="nav nav-list">
                         <li class="nav-header">SUB CATEGORIES</li>
-                        <li><a href="products.html">Nullam semper elementum</a></li>
-                        <li class="active"><a href="products.html">Phasellus ultricies</a></li>
-                        <li><a href="products.html">Donec laoreet dui</a></li>
-                        <li><a href="products.html">Nullam semper elementum</a></li>
-                        <li><a href="products.html">Phasellus ultricies</a></li>
-                        <li><a href="products.html">Donec laoreet dui</a></li>
+                        @*Todo: need to fix the href link*@
+                        @foreach (var item in Model.subCategories)
+                        {
+                            <li class="@(item==Model.product.SubCategory ? "active" : null )"><a href="/Home/Index">@item</a></li>
+                        }
                     </ul>
                     <br />
                     <ul class="nav nav-list below">
                         <li class="nav-header">MANUFACTURES</li>
-                        <li><a href="products.html">Adidas</a></li>
-                        <li><a href="products.html">Nike</a></li>
-                        <li><a href="products.html">Dunlop</a></li>
-                        <li><a href="products.html">Yamaha</a></li>
+                        @*Todo: need to fix the href link*@
+                        @foreach (var item in Model.manufactures)
+                        {
+                            <li><a href="/Home/Index">@item</a></li>
+                        }
                     </ul>
                 </div>
                 <div class="block">
@@ -328,55 +333,40 @@
                     </h4>
                     <div id="myCarousel" class="carousel slide">
                         <div class="carousel-inner">
-                            <div class="active item">
-                                <ul class="thumbnails listing-products">
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <span class="sale_tag"></span>
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/7.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Fusce id molestie massa</a><br />
-                                            <a href="#" class="category">Suspendisse aliquet</a>
-                                            <p class="price">$261</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="item">
-                                <ul class="thumbnails listing-products">
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/8.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Tempor sem sodales</a><br />
-                                            <a href="#" class="category">Urna nec lectus mollis</a>
-                                            <p class="price">$134</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+                            @foreach (var item in @Model.relatedProducts)
+                            {
+                                var firstItem = Model.relatedProducts.ElementAtOrDefault(new Random().Next(Model.relatedProducts.Count()));
+
+                                <div class="@(item == firstItem ? "active item" : "item" )">
+                                    <ul class="thumbnails listing-products">
+                                        <li class="span3">
+                                            <div class="product-box">
+                                                <span class="sale_tag"></span>
+                                                <a href="/ProductDetails/index/@item.Id"><img alt="" src="@item.Images.FirstOrDefault().Path"></a><br />
+                                                <a href="/ProductDetails/index/@item.Id" class="title">@item.Name</a><br />
+                                                <a href="#" class="category">@item.SubCategory</a>
+                                                <p class="price">@item.Price SEK</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
+                @*bestseller is sorted by number of user reviews*@
                 <div class="block">
                     <h4 class="title"><strong>Best</strong> Seller</h4>
                     <ul class="small-product">
-                        <li>
-                            <a href="#" title="Praesent tempor sem sodales">
-                                <img src="themes/images/ladies/1.jpg" alt="Praesent tempor sem sodales">
-                            </a>
-                            <a href="#">Praesent tempor sem</a>
-                        </li>
-                        <li>
-                            <a href="#" title="Luctus quam ultrices rutrum">
-                                <img src="themes/images/ladies/2.jpg" alt="Luctus quam ultrices rutrum">
-                            </a>
-                            <a href="#">Luctus quam ultrices rutrum</a>
-                        </li>
-                        <li>
-                            <a href="#" title="Fusce id molestie massa">
-                                <img src="themes/images/ladies/3.jpg" alt="Fusce id molestie massa">
-                            </a>
-                            <a href="#">Fusce id molestie massa</a>
-                        </li>
+                        @foreach (var item in @Model.relatedProducts.OrderByDescending(p => p.UserReviews.Count()).Take(3))
+                        {
+                            <li>
+                                <a href="#" title="@item.Name">
+                                    <img src="@item.Images.FirstOrDefault().Path" alt="@item.Description">
+                                </a>
+                                <a href="#">@item.Name</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
