--- a/WebShop.WebUI/Views/Account/Login.cshtml
+++ b/WebShop.WebUI/Views/Account/Login.cshtml
@@ -4,66 +4,100 @@
 
 <section class="header_text sub">
     <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
-   
+
 </section>
 
-    
-       
-            <h4 class="title"><span class="text"><strong>Login</strong> Form</span></h4>
 
 
-            <div class="row">
-                <div class="span5">
-                    <section id="main-content">
-                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-stacked", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                                            
-                                                            <hr />
-                                                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<h4 class="title"><span class="text"><strong>Login</strong> Form</span></h4>
 
 
-                                                                                             
+<div class="row">
+    <div class="span5">
+        <section id="main-content">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-stacked", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
 
-                                                                                            <div class="control-group">
-                                                                                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                                                                                <div class="controls">
-                                                                                                    @Html.TextBoxFor(m => m.Email, new { @class = "input-xlarge" })
-                                                                                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                                                                                                </div>
-                                                                                            </div>
-                                                                                                            <div class="control-group">
-                                                                                                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                                                                                                <div class="controls">
-                                                                                                                    @Html.PasswordFor(m => m.Password, new { @class = "input-xlarge" })
-                                                                                                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                                                                                                </div>
-                                                                                                            </div>
-                                                                                                                            <div class="control-group">
-                                                                                                                                <div class="col-md-offset-2 col-md-10">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                                                                                                                                    <div class="controls">
-                                                                                                                                        @Html.CheckBoxFor(m => m.RememberMe)
 
-                                                                                                                                    </div>
-                                                                                                                                    @Html.LabelFor(m => m.RememberMe)
-                                                                                                                                </div>
-                                                                                                                            </div>
-                                                                                                                                            <div class="form-group">
-                                                                                                                                                <div class="controls">
-                                                                                                                                                    <input type="submit" value="Log in" class="btn btn-inverse large" />
-                                                                                                                                                    @Html.ActionLink("Register as a new user", "Register")
-                                                                                                                                                </div>
-                                                                                                                                            </div> <p>
-                                                                                                                                              
-                                                                                                                                            </p>
 
-                                                                                                                                        }
-                    </section>
+
+                <div class="control-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="controls">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "input-xlarge" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-              
-            </div>
+                <div class="control-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="controls">
+                        @Html.PasswordFor(m => m.Password, new { @class = "input-xlarge" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="col-md-offset-2 col-md-10">
 
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
+                        <div class="controls">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+
+                        </div>
+                        @Html.LabelFor(m => m.RememberMe)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="controls">
+
+
+                        <input type="submit" class="btn btn-success" value="Login"  id="login" />
+
+
+
+                        <input type="hidden" name="Register" value="Register" />
+                        <span>
+                            @Html.ActionLink("Register as a new user", "Register", null,
+                                               new { @class = "btn btn-success " })
+                        </span>
+
+
+
+                    </div>
+                </div> <p>
+
+                </p>
+
             }
+        </section>
+    </div>
+
+</div>
+<script type="text/javascript">
+
+
+    $('#login').on('click', function (e) {
+        e.preventDefault();
+        var form = $(this).parents('form');
+        swal({
+            title: "Congratulations!!",
+            text: "",
+            type: "success",
+            confirmButtonColor: "#DD6B55",
+            confirmButtonText: "",
+            closeOnConfirm: false
+        }, function (isConfirm) {
+            if (isConfirm) form.submit();
+        });
+    });
+   
+                   
+      
+    
+    </script>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
