--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -163,6 +163,10 @@
 
     <script src="/Content/themes/js/common.js"></script>
     <script src="/Content/themes/js/jquery.flexslider-min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+
     <script type="text/javascript">
         $(function () {
             $(document).ready(function () {
@@ -176,8 +180,12 @@
                 });
             });
         });
-    </script>
 
+
+
+        
+    </script>
+  
 
 @{ /*
     @Scripts.Render("~/bundles/jquery")
